@@ -150,6 +150,32 @@ fi
 AM_CONDITIONAL(HAVE_JACK, test $HAVE_JACK = 1)
 AC_DEFINE_UNQUOTED(HAVE_JACK,$HAVE_JACK,[Define to 1 if you have JACK installed.])
 
+# MidiShare (Linux, OS X, Windows)
+AC_CHECK_HEADER(MidiShare.h,
+    AC_CHECK_LIB(MidiShare, MidiCountEvs,
+                            have_midishare=1,
+                            have_midishare=0
+                )
+                ,
+                have_midishare=0
+)
+if test "$have_midishare" = "1"; then
+    have_midi_input_driver="true"
+fi
+AM_CONDITIONAL(HAVE_MIDISHARE, test $have_midishare = "1")
+AC_DEFINE_UNQUOTED(HAVE_MIDISHARE,$have_midishare,[Define to 1 if you have MidiShare installed.])
+
+# CoreMIDI (OS X)
+AC_CHECK_HEADER(CoreMIDI/CoreMIDI.h,
+                have_coremidi=1,
+                have_coremidi=0
+)
+if test "$have_coremidi" = "1"; then
+    have_midi_input_driver="true"
+fi
+AM_CONDITIONAL(HAVE_COREMIDI, test $have_coremidi = "1")
+AC_DEFINE_UNQUOTED(HAVE_COREMIDI,$have_coremidi,[Define to 1 if you have CoreMIDI installed.])
+
 # Check presence of libgig
 libgig_version="2.0.0"
 PKG_CHECK_MODULES(GIG, gig >= $libgig_version, HAVE_GIG=true, HAVE_GIG=false)
@@ -175,7 +201,10 @@ AC_DEFINE_UNQUOTED(HAVE_SQLITE3,$HAVE_SQLITE3,[Define to 1 if you have SQLITE3 i
 
 if test "$have_midi_input_driver" = "false"; then
     echo "No supported MIDI input system found!"
-    echo "Sorry, LinuxSampler only supports ALSA as MIDI input driver at the moment!"
+    echo "Sorry, LinuxSampler only supports the following MIDI drivers at the moment:"
+    echo "ALSA, MIDIShare, CoreMIDI."
+    echo "If you think you have one of those available on your system, make sure you"
+    echo "also have the respective development (header) files installed."
     exit -1;
 fi
 if test "$have_audio_output_driver" = "false"; then
