@@ -11,6 +11,28 @@ alsa_src  =
 alsa_ladd =
 endif
 
+if HAVE_MIDISHARE
+midishare_src  = MidiInputDeviceMidiShare.cpp MidiInputDeviceMidiShare.h
+midishare_ladd = -lMidiShare
+else
+midishare_src  =
+midishare_ladd =
+endif
+
+if HAVE_COREMIDI
+coremidi_src  = MidiInputDeviceCoreMidi.cpp MidiInputDeviceCoreMidi.h
+coremidi_ldflags = -framework CoreMIDI
+else
+coremidi_src  =
+coremidi_ldflags =
+endif
+
 noinst_LTLIBRARIES = liblinuxsamplermididriver.la
-liblinuxsamplermididriver_la_SOURCES = MidiInputDevice.cpp MidiInputDevice.h MidiInputDeviceFactory.h MidiInputDeviceFactory.cpp MidiInputPort.cpp MidiInputPort.h $(alsa_src)
-liblinuxsamplermididriver_la_LIBADD = $(alsa_ladd)
+liblinuxsamplermididriver_la_SOURCES = MidiInputDevice.cpp MidiInputDevice.h \
+                                       MidiInputDeviceFactory.h MidiInputDeviceFactory.cpp \
+                                       MidiInputPort.cpp MidiInputPort.h \
+                                       $(alsa_src) \
+                                       $(midishare_src) \
+                                       $(coremidi_src)
+liblinuxsamplermididriver_la_LIBADD = $(alsa_ladd) $(midishare_ladd) $(coremidi_ladd)
+liblinuxsamplermididriver_la_LDFLAGS = $(coremidi_ldflags)
