@@ -1,3 +1,9 @@
+Version CVS HEAD (?)
+
+  * packaging changes:
+    - updated autotools build files to compile on OS X
+      (conditional compilation of CoreMIDI and MidiShare drivers)
+
 Version 0.3.1 (24 May 2005)
 
   * initial release
